[tool.poetry]
name = "pdfgen"
version = "1.0.4"
description = "Pyppeteer-based async python wrapper to convert html to pdf"
authors = ["Shivansh Saini <shivanshs9@gmail.com>"]
license = "MIT"
homepage = "https://github.com/shivanshs9/pdfgen-python"
classifiers=[
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Text Processing',
    'Topic :: Text Processing :: General',
    'Topic :: Text Processing :: Markup',
    'Topic :: Text Processing :: Markup :: HTML',
    'Topic :: Text Processing :: Markup :: XML',
    'Topic :: Utilities'
]
readme = 'README.md'
include = [
    'README.md',
    'AUTHORS.rst',
    'HISTORY.md'
]

[tool.poetry.dependencies]
python = "^3.6.1"
pyppeteer = "^0.2.2"
PyPDF2 = "^1.26.0"
syncasync = "^20180812"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-asyncio = "^0.12.0"
asynctest = "^0.13.0"

[tool.poetry.scripts]
pdfgen-setup = 'pdfgen.setup:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
